Maquetacion de pantallas
Maquetacion de pantallas
buscador-filtro.php
resultados.php
perfil.php
perfil-doctor.php

--- a/css/voyaldoc.css
+++ b/css/voyaldoc.css
@@ -19,7 +19,7 @@ body {
  url('../fonts/segoeuisl.ttf') format('truetype'); 
  font-weight: normal; 
  font-style: normal;
-} 
+}
 
 
 /*************************
@@ -48,7 +48,7 @@ body {
 
 .sloganMenu h1{
   font-size: 14px;
-  font-family: 'Open Sans',sans-serif;';
+  font-family: 'Open Sans',sans-serif;
   color: #fff;
 }
 
@@ -164,6 +164,7 @@ body {
 .form-control:-ms-input-placeholder {color: #fff;}
 
 .especialista{
+	margin-left:-10px;
   margin-right: -30px;
 }
 
@@ -174,6 +175,264 @@ body {
 .direccion{
  margin-right: 8px;
 }
+
+
+/****Estilos Alex****/
+
+/********************
+   PAGE RESULTADOS
+*********************/
+.filtrar{
+	margin:20px -42px 30px 5px;
+}
+.costo{
+	margin:20px -61px 30px 0;
+}
+.nombre{
+	margin:20px 0 30px;
+}
+.btn{
+	margin-top:56px;
+	margin-bottom:40px;
+	margin-left:5px;
+}
+
+.text_resultado{
+	margin-top:20px;
+    font-family: 'Open Sans',sans-serif;
+	font-size:15px;
+	color: #0F91CB;
+	font-weight:bold;
+}
+.resultado{
+	margin-top:2px;
+	background:#F4F4F4;
+	height:auto;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	padding-top:20px;
+	padding-bottom:20px;
+	margin-bottom:20px;
+}
+.aplicacion{
+	margin-top:2px;
+	background:#00F;
+	height:auto;
+}
+.avatar{
+	margin-left:-16px;
+}
+
+.titulo-dr{
+	font-family: 'Open Sans',sans-serif;
+	font-size:14px;
+	color: #0F91CB;
+	font-weight:bold;
+	text-decoration:underline;
+}
+.subtitulo{
+	font-size:14px;
+	color:#444444;
+	font-weight:bold;
+}
+.semana-inicio{
+	margin-left:15px;
+}
+.semana{
+	font-size:12px;
+	text-align:center;
+}
+.semana, .semana1, .semana-inicio{
+	font-size:12px;
+}
+.semana1{
+	background:#EEECED;
+}
+
+.tit-dia{
+	width:100%;
+	font-weight:bold;
+	font-size:14px;
+	text-align:center;
+	margin:0;
+}
+.horario{
+	color:#19A7C5;
+	text-decoration:underline;
+}
+
+/********************
+     PAGE PERFIL 
+*********************/
+.menu-perfil>li.active>a , .menu-perfil>li.active>a:hover, .menu-perfil > li > a:hover {
+	background: none repeat scroll 0 0 #5EC14C;
+    font-size: 16px;
+    font-weight: bold;
+    height: 40px;
+    margin-top: 10px;
+    padding: 10px;
+}
+.menu-perfil > li > a{
+	background: none repeat scroll 0 0 #C2C2C2;
+	font-size: 16px;
+    font-weight: bold;
+    height: 40px;
+    margin-top: 10px;
+    padding: 10px;
+	margin-bottom:10px;
+}
+.menu-perfil{
+	border:none;	
+	margin-top:20px;
+}
+.borderArt {
+    border-top: 4px solid #5EC14C;
+    height: 1px;
+    left: 0;
+    position: absolute;
+    top: 329px;
+    width: 100%;
+}
+.perfil{
+	background:#FFF;
+	border:none;
+	margin-top:20px;
+}
+.tit-perfil{
+	color:#2A92C7;
+}
+
+.boton{
+    background: none repeat scroll 0 0 #2A92C9;
+    border: 1px solid #1D6DC1;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #1D6DC1;
+	width:111px;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+.boton:hover{
+	background:#2A92FE;
+	text-decoration:none;
+	color:#FFF;
+}
+.boton-azul{
+	color:#FFF;
+	width:111px;
+	margin-bottom:20px;
+	margin-top:20px;
+}
+.calendario{
+	height:400px;
+	background:#CCC;
+	margin-bottom:30px;
+}
+.cuenta{
+	background:#F5F5F5;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	margin-bottom:30px;
+	padding:15px;
+}
+.tit-cuenta{
+	font-weight:bold;
+	color:#2A92FE;
+	margin:0;
+}
+.datos{
+	margin-top:20px;
+	line-height:35px;
+}
+.info-datos{
+	color:#000;
+}
+.datos li{
+	color:#2A92FE;
+	font-weight:bold;
+	font-size:16px;
+}
+.btn-perfil{
+	color:#FFF;
+	margin-bottom:20px;
+	margin:30px auto;
+	text-align:center;
+}
+.enmedio{
+	margin-left:-5px;
+}
+.final{
+	margin-left:-24px;
+}
+.boton-verde{
+    background: none repeat scroll 0 0 #5EBB4B;
+    border: 1px solid #3B9928;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #3B9928;
+	width:111px;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	font-weight:bold;
+}
+.boton-verde:hover{
+	background:#3B9928;
+	text-decoration:none;
+	color:#FFF;
+
+}
+.boton-naranja{
+    background: none repeat scroll 0 0 #F18622;
+    border: 1px solid #E66E0C;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #E66E0C;
+	width:111px;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	font-weight:bold;	
+}
+.boton-naranja:hover{
+	background: #E66E0C;
+	text-decoration:none;
+	color:#FFF;
+}
+.consultorios{
+	background:#F5F5F5;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	margin-bottom:30px;
+	padding:15px;
+}
+.boton-blue{
+    background: none repeat scroll 0 0 #2A92C9;
+    border: 1px solid #1D6DC1;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #1D6DC1;
+	width:111px;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;	
+}
+
+
+/****Estilos Alex****/
+
 
 .texto-buscador{
   margin-left: 17px;
@@ -505,6 +764,126 @@ margin: 10px 3px;
   margin: -20px;
 }
 
+/****Estilos Alex****/
+
+.filtrar{
+	margin-left:5px;
+   	margin-right: -42px;
+	margin-bottom:40px;
+	margin-top:0;
+}
+.costo{
+	margin-left: 12px;
+	margin-bottom:40px;
+	margin-top:0;	
+}
+.nombre{
+	margin-left: 31px;
+	margin-bottom:40px;
+	margin-top:0;	
+}
+.btn{
+	margin-top:20px;
+	margin-bottom:20px;
+	margin-left:1px;
+}
+
+/********************
+     PAGE PERFIL 
+*********************/
+.menu-perfil>li.active>a , .menu-perfil>li.active>a:hover, .menu-perfil > li > a:hover {
+	background: none repeat scroll 0 0 #5EC14C;
+    font-size: 16px;
+    font-weight: bold;
+    height: 40px;
+    margin-top: 10px;
+    padding: 10px;
+
+}
+.menu-perfil > li > a{
+	background: none repeat scroll 0 0 #C2C2C2;
+	font-size: 16px;
+    font-weight: bold;
+    height: 40px;
+    margin-top: 10px;
+    padding: 10px;
+	margin-bottom:10px;
+}
+.menu-perfil{
+	border:none;	
+}
+.borderArt {
+    border-top: 4px solid #5EC14C;
+    height: 1px;
+    left: 0;
+    position: absolute;
+    top: 338px;
+    width: 100%;
+}
+.perfil{
+	background:#FFF;
+	border:none;
+}
+
+.boton-verde{
+    background: none repeat scroll 0 0 #5EBB4B;
+    border: 1px solid #3B9928;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #3B9928;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+.boton-verde:hover{
+	background:#3B9928;
+	text-decoration:none;
+	color:#FFF;
+}
+.boton-naranja{
+    background: none repeat scroll 0 0 #F18622;
+    border: 1px solid #E66E0C;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #E66E0C;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+.boton-naranja:hover{
+	background: #E66E0C;
+	text-decoration:none;
+	color:#FFF;
+}
+.enmedio{
+  margin-left:16px;
+  width:auto;
+}
+.final{
+  width:auto;
+    margin-left:-15px;
+}
+.boton-blue{
+    background: none repeat scroll 0 0 #2A92C9;
+    border: 1px solid #1D6DC1;
+    color: #FFFFFF;
+    height: 40px;
+    text-shadow: 0 -1px 0 #1D6DC1;
+	padding:10px;
+	transition: box-shadow 0.5s ease 0s, border 0.5s ease 0s, background 0.5s ease 0s;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+	
+
+/****Estilos Alex****/
+
+
 .informacionSalud{
   margin: 10px 5px;
   width: 95px;
@@ -649,8 +1028,6 @@ margin: 10px 3px;
     height: 40px;
     float: left;
   }
-
-
 
 }
 
